<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:padding="5dp"
    tools:context="bbc.umarket.umarketapp2.Main.Register">

    <ScrollView
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foregroundGravity="left"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="4dp" />

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_black"
                android:gravity="center"
                android:text="@string/registertext"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_fname"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_fname"
                android:transitionName="@string/trans_Id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_lname"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_lname"
                android:transitionName="@string/trans_Id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_studid"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_studid"
                android:transitionName="@string/trans_Id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_contactnum"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_contact"
                android:transitionName="@string/trans_Id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_email"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/reg_email"
                android:transitionName="@string/trans_Id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Reg_CreatePass"
                style="@style/InputLayoutOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_pass"
                android:transitionName="@string/trans_Pass"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Interest"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Select one or more interest below."
                android:textColor="@color/black"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/chkSchoolSupplies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="School Supplies"
                        android:textSize="12sp" />
                    <CheckBox
                        android:id="@+id/chkElectronics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Electronics"
                        android:textSize="12sp" />
                    <CheckBox
                        android:id="@+id/chkFoodsBeverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Foods and Beverages"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/chkClothesandAccessories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Clothes and Accessories"
                        android:textSize="12sp" />
                    <CheckBox
                        android:id="@+id/chkBeautyProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Beauty Products"
                        android:textSize="12sp" />
                    <CheckBox
                        android:id="@+id/chkSportsEquipment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Sports Equipment"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/backlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Already have an account? Log in instead."
                android:textColor="@color/black"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/ButtonStyle01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/corner_layouts"
                android:fontFamily="@font/poppins_semibold"
                android:text="Register"
                android:transitionName="@string/trans_btnLogin" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>